--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,3 +2,7 @@
 
     background-image: url('https://cf.bstatic.com/xdata/images/hotel/max1024x768/34886654.jpg?k=83f22b8a237db8c6231bccdd66e4cfa683addc7ff81557eba785fb93093dd049&o=&hp=1')
 }
+
+.home-container{
+    margin-top:50px;
+}
